# gw2_inventory

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: api.rs  cache.rs  filtering.rs  main.rs  models.rs  screen.rs
src/util/: filter.rs  mod.rs  model.rs
