[package]
name = "gw2_inventory"
version = "0.1.0"
authors = ["Celeo <mattboulanger@fastmail.com>"]
edition = "2018"
description = ""
readme = "README.md"
homepage = "https://github.com/celeo/gw2_inventory"
repository = "https://github.com/celeo/gw2_inventory"
license = "MIT OR Apache-2.0"
exclude = [
  ".github"
]
keywords = []
categories = [
  "command-line-utilities"
]

[dependencies]
anyhow = "1.0.37"
dialoguer = "0.7.1"
dotenv = "0.15.0"
fuzzy-matcher = "0.3.7"
home = "0.5.3"
log = "0.4.11"
pretty_env_logger = "0.4.0"
reqwest = { version = "0.11.0", features = ["blocking", "json"] }
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.61"
termion = "1.5.5"
tui = "0.14.0"
unicode-width = "0.1.8"

[dev-dependencies]
mockito = "0.28.0"
